some links update

--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -72,18 +72,18 @@
                             <div class="header-navigation">
                                 <ul class="main-menu">
                                     <li><a href="#">Home</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="index.html">Home 01</a></li>
                                             <li><a href="index-2.html">Home 02</a></li>
                                             <li><a href="index-3.html">Home 03</a></li>
                                             <li><a href="index-4.html">Home 04</a></li>
                                             <li><a href="index-5.html">Home 05</a></li>
                                             <li><a href="index-6.html">Home 06</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li class="active-menu"><a href="about.html">About</a></li>
                                     <li><a href="#">Pages</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="event-list.html">Event List</a></li>
                                             <li><a href="event-single.html">Event Single</a></li>
                                             <li><a href="schedule.html">Event Schedule</a></li>
@@ -94,14 +94,14 @@
                                             <li><a href="price.html">Pricing</a></li>
                                             <li><a href="faq.html">FAQ's</a></li>
                                             <li><a href="login-register.html">Login Register</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="#">Blog</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="blog.html">Blog Grid</a></li>
                                             <li><a href="blog-standard.html">Latest News</a></li>
                                             <li><a href="blog-details.html">Blog Details</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
@@ -242,18 +242,18 @@
                 <div class="offcanvas-menu offcanvas-menu-2">
                     <ul class="main-menu">
                         <li class="active-menu"><a href="#">Home</a>
-                            <ul class="sub-menu">
+                            <!-- <ul class="sub-menu">
                                 <li><a class="active" href="index.html">Home 01</a></li>
                                 <li><a href="index-2.html">Home 02</a></li>
                                 <li><a href="index-3.html">Home 03</a></li>
                                 <li><a href="index-4.html">Home 04</a></li>
                                 <li><a href="index-5.html">Home 05</a></li>
                                 <li><a href="index-6.html">Home 06</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#">Pages</a>
-                            <ul class="sub-menu">
+                            <!-- <ul class="sub-menu">
                                 <li><a href="event-list.html">Event List</a></li>
                                 <li><a href="event-single.html">Event Single</a></li>
                                 <li><a href="schedule.html">Event Schedule</a></li>
@@ -264,14 +264,14 @@
                                 <li><a href="price.html">Pricing</a></li>
                                 <li><a href="faq.html">FAQ's</a></li>
                                 <li><a href="login-register.html">Login Register</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li><a href="#">Blog</a>
-                            <ul class="sub-menu">
+                            <!-- <ul class="sub-menu">
                                 <li><a href="blog.html">Blog Grid</a></li>
                                 <li><a href="blog-standard.html">Latest News</a></li>
                                 <li><a href="blog-details.html">Blog Details</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
