--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -92,6 +92,7 @@
                                         <li><a href="login-register.html">Login Register</a></li>
                                     </ul> -->
                                 </li>
+                                <li><a href="#Sponsors">Sponsors</a></li>
                                 <li><a href="#News">News</a>
                                     <!-- <ul class="sub-menu">
                                         <li><a href="blog.html">Blog Grid</a></li>
@@ -931,7 +932,7 @@
         <!-- Pricing End -->
 
         <!-- Event Sponsors Start -->
-        <div class="meeta-event-sponsors-2 section-padding" style="background-image: url(assets/images/bg/sponsor-bg-2.jpg);">
+        <div id="Sponsors" class="meeta-event-sponsors-2 section-padding" style="background-image: url(assets/images/bg/sponsor-bg-2.jpg);">
             <div class="container">
 
                 <!-- Section Title Start -->
@@ -973,6 +974,7 @@
             </div>
         </div>
         <!-- Event Sponsors End -->
+        
 
         <!-- Blog Start -->
         <div id="News"  class="meeta-blog section-padding-02">
