--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Meeta - Event & Conference HTML5 Template</title>
+    <title> Anatolian Blockchain Summit</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -775,7 +775,6 @@
                     <a href="https://www.instagram.com/cankayablockchain/"><i class="fab fa-instagram"></i></a>
                     <a href="https://twitter.com/cankayachain"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.linkedin.com/company/cankayablockchain"><i class="fab fa-linkedin"></i></a>
-                    
                 </div>
                 <!-- Footer widget Social End -->
 
