--- a/ABSummit/contact.html
+++ b/ABSummit/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Meeta - Event & Conference HTML5 Template</title>
+    <title> Anatolian Blockchain Summit </title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -72,18 +72,18 @@
                             <div class="header-navigation">
                                 <ul class="main-menu">
                                     <li><a href="#">Home</a>
-                                        <ul class="sub-menu">
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="index.html">Home 01</a></li>
                                             <li><a href="index-2.html">Home 02</a></li>
                                             <li><a href="index-3.html">Home 03</a></li>
                                             <li><a href="index-4.html">Home 04</a></li>
                                             <li><a href="index-5.html">Home 05</a></li>
                                             <li><a href="index-6.html">Home 06</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="about.html">About</a></li>
-                                    <li><a href="#">Pages</a>
-                                        <ul class="sub-menu">
+                                    <li><a href="index.html">Speakers</a>
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="event-list.html">Event List</a></li>
                                             <li><a href="event-single.html">Event Single</a></li>
                                             <li><a href="schedule.html">Event Schedule</a></li>
@@ -94,14 +94,15 @@
                                             <li><a href="price.html">Pricing</a></li>
                                             <li><a href="faq.html">FAQ's</a></li>
                                             <li><a href="login-register.html">Login Register</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
-                                    <li><a href="#">Blog</a>
-                                        <ul class="sub-menu">
+                                    <li class="active-menu"><a href="index.html">Sponsors</a></li>
+                                    <li><a href="index.html">News</a>
+                                        <!-- <ul class="sub-menu">
                                             <li><a href="blog.html">Blog Grid</a></li>
                                             <li><a href="blog-standard.html">Latest News</a></li>
                                             <li><a href="blog-details.html">Blog Details</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li class="active-menu"><a href="contact.html">Contact</a></li>
                                 </ul>
@@ -116,11 +117,11 @@
 
                                 <div class="header-actions">
                                     <div class="header-action">
-                                        <button class="icon-open-container">
+                                        <!-- <button class="icon-open-container">
                                             <span class="action-text">My Cart</span>
                                             <i class="flaticon-shopping-cart"></i>
                                             <span class="count">3</span>
-                                        </button>
+                                        </button> -->
                                     </div>
                                     <div class="header-action d-none d-sm-block">
                                         <div class="header-search">
@@ -142,7 +143,7 @@
                                 </div>
 
                                 <div class="header-btn d-none d-md-block">
-                                    <a href="price.html" class="btn btn-3 btn-primary">Buy Ticket Now</a>
+                                    <a href="#" class="btn btn-3 btn-primary">Register</a>
                                 </div>
 
                                 <!-- Header Toggle Start -->
@@ -242,18 +243,18 @@
                 <div class="offcanvas-menu offcanvas-menu-2">
                     <ul class="main-menu">
                         <li><a href="#">Home</a>
-                            <ul class="sub-menu">
+                            <!-- <ul class="sub-menu">
                                 <li><a href="index.html">Home 01</a></li>
                                 <li><a href="index-2.html">Home 02</a></li>
                                 <li><a href="index-3.html">Home 03</a></li>
                                 <li><a href="index-4.html">Home 04</a></li>
                                 <li><a href="index-5.html">Home 05</a></li>
                                 <li><a href="index-6.html">Home 06</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="#">Pages</a>
-                            <ul class="sub-menu">
+                        <li><a href="index.html">Speakers</a>
+                            <!-- <ul class="sub-menu">
                                 <li><a href="event-list.html">Event List</a></li>
                                 <li><a href="event-single.html">Event Single</a></li>
                                 <li><a href="schedule.html">Event Schedule</a></li>
@@ -264,14 +265,15 @@
                                 <li><a href="price.html">Pricing</a></li>
                                 <li><a href="faq.html">FAQ's</a></li>
                                 <li><a href="login-register.html">Login Register</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
-                        <li><a href="#">Blog</a>
-                            <ul class="sub-menu">
+                        <li><a href="index.html">Sponsors</a>
+                        <li><a href="index.html">News</a>
+                            <!-- <ul class="sub-menu">
                                 <li><a href="blog.html">Blog Grid</a></li>
                                 <li><a href="blog-standard.html">Latest News</a></li>
                                 <li><a href="blog-details.html">Blog Details</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li class="active-menu"><a href="contact.html">Contact</a></li>
                     </ul>
@@ -412,7 +414,7 @@
                                 </div>
                                 <div class="info-content">
                                     <h5 class="title">Location</h5>
-                                    <p>1800 Abbot Kinney Blvd</p>
+                                    <p>Ankara, Turkey</p>
                                 </div>
                             </div>
                             <!--Single Contact Info End -->
@@ -462,11 +464,9 @@
 
                 <!-- Footer widget Social Start -->
                 <div class="footer-widget-social">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-dribbble"></i></a>
-                    <a href="#"><i class="fab fa-behance"></i></a>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="https://www.instagram.com/cankayablockchain/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/cankayachain"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/company/cankayablockchain"><i class="fab fa-linkedin"></i></a>
                 </div>
                 <!-- Footer widget Social End -->
 
