--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -109,7 +109,7 @@
                         <div class="header-meta">
 
                             <div class="header-btn d-none d-md-block">
-                                <a href="price.html" class="btn btn-primary">Register</a>
+                                <a href="#" class="btn btn-primary">Register</a>
                             </div>
 
                             <!-- Header Toggle Start -->
@@ -208,18 +208,18 @@
                 <div class="offcanvas-menu">
                     <ul class="main-menu">
                         <li class="active-menu"><a href="#">Home</a>
-                            <ul class="sub-menu">
+                            <!-- <ul class="sub-menu">
                                 <li><a href="index.html">Home 01</a></li>
                                 <li><a href="index-2.html">Home 02</a></li>
                                 <li><a href="index-3.html">Home 03</a></li>
                                 <li><a href="index-4.html">Home 04</a></li>
                                 <li><a href="index-5.html">Home 05</a></li>
                                 <li><a class="active" href="index-6.html">Home 06</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="#">Pages</a>
-                            <ul class="sub-menu">
+                        <li><a href="#Speakers">Speakers</a>
+                            <!-- <ul class="sub-menu">
                                 <li><a href="speaker-one.html">Speakers 01</a></li>
                                 <li><a href="speaker-.html">Speakers 02</a></li>
                                 <li><a href="speaker-single.html">Speaker Single</a></li>
@@ -230,14 +230,15 @@
                                 <li><a href="price.html">Pricing</a></li>
                                 <li><a href="faq.html">FAQ's</a></li>
                                 <li><a href="login-register.html">Login Register</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
-                        <li><a href="#">Blog</a>
-                            <ul class="sub-menu">
+                        <li><a href="#Sponsors">Sponsors</a>
+                        <li><a href="#News">News</a>
+                            <!-- <ul class="sub-menu">
                                 <li><a href="blog.html">Blog Grid</a></li>
                                 <li><a href="blog-standard.html">Latest News</a></li>
                                 <li><a href="blog-details.html">Blog Details</a></li>
-                            </ul>
+                            </ul> -->
                         </li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -256,7 +257,7 @@
                             <p class="text" data-aos-delay="700" data-aos="fade-up">December 17, Eskişehir, Türkiye</p>
                             <h2 class="title" data-aos-delay="800" data-aos="fade-up">Anatolian Blockchain  <br> <span>Meetup 2.0</span></h2>
                             <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
-                                <a class="btn-2" href="price.html">Buy Ticket Now</a>
+                                <a class="btn-2" href="#">Register Now</a>
                             </div>
                         </div>
                     </div>
@@ -991,14 +992,14 @@
                             <!-- Single Blog Start -->
                             <div class="single-blog">
                                 <div class="blog-image">
-                                    <a href="blog-details.html"><img src="assets/images/blog/blog-1.jpg" alt=""></a>
+                                    <a target="_blank" href="https://kriptokoin.com/blockchain-futurezone-5-kasimda-yapilacak/"><img src="assets/images/blog/blog-1.jpg" alt=""></a>
                                 </div>
                                 <div class="blog-content">
                                     <div class="blog-meta">
                                         <span class="category">Conference</span>
-                                        <span class="date">Octobor 09, 2021</span>
+                                        <span class="date">November 05, 2022</span>
                                     </div>
-                                    <h3 class="title"><a href="blog-details.html">Registration for opening workshop </a></h3>
+                                    <h3 class="title"><a target="_blank" href="https://kriptokoin.com/blockchain-futurezone-5-kasimda-yapilacak/">Blockchain FutureZone will be held on November 5th!</a></h3>
                                 </div>
                             </div>
                             <!-- Single Blog End -->
@@ -1007,14 +1008,14 @@
                             <!-- Single Blog Start -->
                             <div class="single-blog">
                                 <div class="blog-image">
-                                    <a href="blog-details.html"><img src="assets/images/blog/blog-2.jpg" alt=""></a>
+                                    <a target="_blank" href="https://www.coindeskturkiye.com/teknoloji/anadoluyu-karis-karis-gezip-blokzincir-anlatacaklar-2164"><img src="assets/images/blog/cankaya.jpeg" alt=""></a>
                                 </div>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <span class="category color-1">Conference</span>
-                                        <span class="date">Octobor 09, 2021</span>
+                                        <span class="category color-1">Events</span>
+                                        <span class="date">September 29, 2022</span>
                                     </div>
-                                    <h3 class="title"><a href="blog-details.html">Registration for opening workshop </a></h3>
+                                    <h3 class="title"><a target="_blank" href="https://www.coindeskturkiye.com/teknoloji/anadoluyu-karis-karis-gezip-blokzincir-anlatacaklar-2164">They Will Travel All Through Anatolia and Tell About Blockchain </a></h3>
                                 </div>
                             </div>
                             <!-- Single Blog End -->
