--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1024,14 +1024,14 @@
                             <!-- Single Blog Start -->
                             <div class="single-blog">
                                 <div class="blog-image">
-                                    <a href="blog-details.html"><img src="assets/images/blog/blog-3.jpg" alt=""></a>
+                                    <a target="_blank" href="https://www.btchaber.com/cankaya-blockchain-blockchain-bulusmalarinin-ilkini-duzenledi/"><img src="assets/images/blog/anatolianMeetupPhoto.png" alt=""></a>
                                 </div>
                                 <div class="blog-content">
                                     <div class="blog-meta">
                                         <span class="category color-2">Conference</span>
                                         <span class="date">Octobor 09, 2021</span>
                                     </div>
-                                    <h3 class="title"><a href="blog-details.html">Registration for opening workshop </a></h3>
+                                    <h3 class="title"><a target="_blank" href="https://www.btchaber.com/cankaya-blockchain-blockchain-bulusmalarinin-ilkini-duzenledi/">Çankaya Blockchain Organized  First of Anadolu Blockchain Meetings</a></h3>
                                 </div>
                             </div>
                             <!-- Single Blog End -->
