--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1057,7 +1057,7 @@
                                 <a href="assets/images/gallery-1.jpg" class="gallery-plus image-popup">
                                     <span></span>
                                 </a>
-                                <h4 class="gallery-title"><a href="#">Developer Conference 2021</a></h4>
+                                <h4 class="gallery-title"><a href="#">Anatolian Blockchain Meetups</a></h4>
                             </div>
                         </div>
                     </div>
@@ -1076,7 +1076,7 @@
                                 <a href="assets/images/gallery-2.jpg" class="gallery-plus image-popup">
                                     <span></span>
                                 </a>
-                                <h4 class="gallery-title"><a href="#">Developer Conference 2021</a></h4>
+                                <h4 class="gallery-title"><a href="#">Anatolian Blockchain Meetups</a></h4>
                             </div>
                         </div>
                     </div>
@@ -1095,7 +1095,7 @@
                                 <a href="assets/images/gallery-7.jpg" class="gallery-plus image-popup">
                                     <span></span>
                                 </a>
-                                <h4 class="gallery-title"><a href="#">Developer Conference 2021</a></h4>
+                                <h4 class="gallery-title"><a href="#">Anatolian Blockchain Meetups</a></h4>
                             </div>
                         </div>
                     </div>
@@ -1114,7 +1114,7 @@
                                 <a href="assets/images/gallery-8.jpg" class="gallery-plus image-popup">
                                     <span></span>
                                 </a>
-                                <h4 class="gallery-title"><a href="#">Developer Conference 2021</a></h4>
+                                <h4 class="gallery-title"><a href="#">Anatolian Blockchain Meetups</a></h4>
                             </div>
                         </div>
                     </div>
@@ -1133,7 +1133,7 @@
                                 <a href="assets/images/gallery-4.jpg" class="gallery-plus image-popup">
                                     <span></span>
                                 </a>
-                                <h4 class="gallery-title"><a href="#">Developer Conference 2021</a></h4>
+                                <h4 class="gallery-title"><a href="#">Anatolian Blockchain Meetups</a></h4>
                             </div>
                         </div>
                     </div>
@@ -1152,7 +1152,7 @@
                                 <a href="assets/images/gallery-3.jpg" class="gallery-plus image-popup">
                                     <span></span>
                                 </a>
-                                <h4 class="gallery-title"><a href="#">Developer Conference 2021</a></h4>
+                                <h4 class="gallery-title"><a href="#">Anatolian Blockchain Meetups</a></h4>
                             </div>
                         </div>
                     </div>
@@ -1171,7 +1171,7 @@
                                 <a href="assets/images/gallery-9.jpg" class="gallery-plus image-popup">
                                     <span></span>
                                 </a>
-                                <h4 class="gallery-title"><a href="#">Developer Conference 2021</a></h4>
+                                <h4 class="gallery-title"><a href="#">Anatolian Blockchain Meetups</a></h4>
                             </div>
                         </div>
                     </div>
@@ -1190,7 +1190,7 @@
                                 <a href="assets/images/gallery-10.jpg" class="gallery-plus image-popup">
                                     <span></span>
                                 </a>
-                                <h4 class="gallery-title"><a href="#">Developer Conference 2021</a></h4>
+                                <h4 class="gallery-title"><a href="#">Anatolian Blockchain Meetups</a></h4>
                             </div>
                         </div>
                     </div>
