--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1028,8 +1028,8 @@
                                 </div>
                                 <div class="blog-content">
                                     <div class="blog-meta">
-                                        <span class="category color-2">Conference</span>
-                                        <span class="date">Octobor 09, 2021</span>
+                                        <span class="category color-2">Event</span>
+                                        <span class="date">September 26, 2022</span>
                                     </div>
                                     <h3 class="title"><a target="_blank" href="https://www.btchaber.com/cankaya-blockchain-blockchain-bulusmalarinin-ilkini-duzenledi/">Çankaya Blockchain Organized  First of Anadolu Blockchain Meetings</a></h3>
                                 </div>
