--- a/ABSummit/contact.html
+++ b/ABSummit/contact.html
@@ -61,7 +61,7 @@
 
                             <!-- Header Logo Start -->
                             <div class="header-logo">
-                                <a href="index.html"><img src="assets/images/logo-4.png" alt="Logo"></a>
+                                <a href="index.html"><img src="assets/images/cankaya-logo/logo.png" alt="Logo"></a>
                             </div>
                             <!-- Header Logo End -->
 
@@ -71,7 +71,7 @@
                             <!-- Header Navigation Start -->
                             <div class="header-navigation">
                                 <ul class="main-menu">
-                                    <li><a href="#">Home</a>
+                                    <li><a href="index.html">Home</a>
                                         <!-- <ul class="sub-menu">
                                             <li><a href="index.html">Home 01</a></li>
                                             <li><a href="index-2.html">Home 02</a></li>
@@ -232,7 +232,7 @@
             <div class="offcanvas-header">
                 <!-- Offcanvas Logo Start -->
                 <div class="offcanvas-logo">
-                    <a href="index.html"><img src="assets/images/logo-4.png" alt=""></a>
+                    <a href="index.html"><img src="assets/images/cankaya-logo/logo.png" alt=""></a>
                 </div>
                 <!-- Offcanvas Logo End -->
                 <button type="button" class="close-btn" data-bs-dismiss="offcanvas"><i class="flaticon-close"></i></button>
@@ -242,7 +242,7 @@
             <div class="offcanvas-body">
                 <div class="offcanvas-menu offcanvas-menu-2">
                     <ul class="main-menu">
-                        <li><a href="#">Home</a>
+                        <li><a href="index.html">Home</a>
                             <!-- <ul class="sub-menu">
                                 <li><a href="index.html">Home 01</a></li>
                                 <li><a href="index-2.html">Home 02</a></li>
