--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -61,7 +61,7 @@
 
                             <!-- Header Logo Start -->
                             <div class="header-logo">
-                                <a href="index.html"><img src="assets/images/logo-4.png" alt="Logo"></a>
+                                <a  href="index.html"><img src="assets/images/logo-deneme.png" alt="Logo"></a>
                             </div>
                             <!-- Header Logo End -->
 
@@ -71,7 +71,7 @@
                             <!-- Header Navigation Start -->
                             <div class="header-navigation">
                                 <ul class="main-menu">
-                                    <li><a href="#">Home</a>
+                                    <li><a href="index.html">Home</a>
                                         <!-- <ul class="sub-menu">
                                             <li><a href="index.html">Home 01</a></li>
                                             <li><a href="index-2.html">Home 02</a></li>
