--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -115,15 +115,15 @@
                             <div class="header-meta">
 
                                 <div class="header-actions">
-                                    <div class="header-action">
+                                    <!-- <div class="header-action">
                                         <button class="icon-open-container">
                                             <span class="action-text">My Cart</span>
                                             <i class="flaticon-shopping-cart"></i>
                                             <span class="count">3</span>
                                         </button>
-                                    </div>
+                                    </div> -->
                                     <div class="header-action d-none d-sm-block">
-                                        <div class="header-search">
+                                        <!-- <div class="header-search">
                                             <a class="search-btn" href="#"><i class="flaticon-loupe"></i></a>
                                             <div class="search-wrap">
                                                 <div class="search-inner">
@@ -137,7 +137,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
 
