--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -307,16 +307,16 @@
                             <!-- About Content Start -->
                             <div class="meeta-about-content">
 
-                                <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their knees, try new things, to be vulnerable, and to have epic adventures together, this time both </p>
+                                <p>Anatolian Blockchain Meetup comes to your city! 2nd of our Anatolian Blockchain Meetup will take place in Eskişehir on 17th of December. It welcomes blockchain experts, c-level project managers, traders, students, entrepreneurs, and Web3 enthusiasts together from all around the world. </p>
 
                                 <div class="about-list">
                                     <ul>
                                         <li class="about-list-item">
-                                            <div class="about-icon">
-                                                <img src="assets/images/ab-icon-1.png" alt="">
+                                            <div style="max-width: 50%" class="about-icon">
+                                                <img src="assets/images/cert.png" alt="">
                                             </div>
                                             <div class="about-text">
-                                                <h3 class="title">Live Music</h3>
+                                                <h3 class="title">Certificate</h3>
                                             </div>
                                         </li>
                                         <li class="about-list-item">
@@ -324,7 +324,7 @@
                                                 <img src="assets/images/ab-icon-2.png" alt="">
                                             </div>
                                             <div class="about-text">
-                                                <h3 class="title">Free Food</h3>
+                                                <h3 class="title">Free Catering</h3>
                                             </div>
                                         </li>
                                         <li class="about-list-item">
@@ -340,7 +340,7 @@
                                                 <img src="assets/images/ab-icon-4.png" alt="">
                                             </div>
                                             <div class="about-text">
-                                                <h3 class="title">Gift Items</h3>
+                                                <h3 class="title">Giveaways</h3>
                                             </div>
                                         </li>
                                     </ul>
@@ -893,10 +893,13 @@
                             </div>
                             <div class="pricing-body">
                                 <ul>
-                                    <li>Back Row Seat</li>
-                                    <li>Free Lunch & Snacks</li>
+                                    <li>All Sessions & Booth Area</li>
+                                    <li>All Networking Activities</li>
                                     <li>Event Certificate</li>
-                                    <li>1 Workshop</li>
+                                    <li>Free Lunch & Coffee</li>
+                                    <li>Special Giveaways</li>
+                                    <li>Right To Participate In Prize Draws</li>
+                                    <li>Custom Card Holders With Your Name</li>
                                 </ul>
                                 <a class="btn " href="#">Book A Seat</a>
                             </div>
