--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -364,8 +364,8 @@
                                     <img src="assets/images/feature-icon-1.png" alt="">
                                 </div>
                                 <div class="feature-content">
-                                    <h3 class="title"><a href="#">Trainings & Awards</a></h3>
-                                    <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their </p>
+                                    <h3 class="title"><a href="#">Workshops</a></h3>
+                                    <p>You can develop your skills and improve your knowledge with workshops that will be organized in the event</p>
                                 </div>
                             </div>
                             <!-- Features Item End -->
@@ -378,7 +378,7 @@
                                 </div>
                                 <div class="feature-content">
                                     <h3 class="title"><a href="#">World Class Speaker</a></h3>
-                                    <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their </p>
+                                    <p>You can listen to our educational speeches given by our well-known speakers. Anatolian Blockchain Meetup acts as a bridge between our speakers and participants, ensuring the transfer of knowledge and experiences </p>
                                 </div>
                             </div>
                             <!-- Features Item End -->
@@ -401,8 +401,8 @@
                                     <img src="assets/images/feature-icon-4.png" alt="">
                                 </div>
                                 <div class="feature-content">
-                                    <h3 class="title"><a href="#">3 Days Conference</a></h3>
-                                    <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their </p>
+                                    <h3 class="title"><a href="#">Networking</a></h3>
+                                    <p> Our main purpose is to increase everyone's network throughout the event. You may find investors to your project, internship & job oppurtunities for your career, start-ups to invest in and get to know important people around blockchain industry.  </p>
                                 </div>
                             </div>
                             <!-- Features Item End -->
