--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -300,7 +300,7 @@
                             <!-- Section Title Start -->
                             <div class="meeta-section-title-2">
                                 <h4 class="sub-title">About Event</h4>
-                                <h2 class="main-title">An evening for creator & art lover meet together</h2>
+                                <h2 class="main-title">The first blockchain event in the city that brings together all kinds of people from the ecosystem</h2>
                             </div>
                             <!-- Section Title End -->
 
