--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -441,15 +441,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="speaker-single.html"><img src="assets/images/speaker/speaker-1.jpg" alt="Speaker"></a>
+                                            <a href="speaker-single.html"><img src="assets/images/speaker/anil.png" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">Mike Fermalin</a></h4>
-                                        <p class="speaker-designation">Lead Speaker</p>
+                                        <h4 class="speaker-name"><a href="speaker-single.html">Anıl Karaçay</a></h4>
+                                        <p class="speaker-designation">Founder of Adchain</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -462,15 +462,15 @@
                                     </div>
                                     <div class="speaker-image">
                                         <div class="image">
-                                            <a href="speaker-single.html"><img src="assets/images/speaker/speaker-2.jpg" alt="Speaker"></a>
+                                            <a href="speaker-single.html"><img src="assets/images/speaker/ekrem.png" alt="Speaker"></a>
                                         </div>
                                         <div class="shape-1">
                                             <img src="assets/images/shape/sp-shape-1.png" alt="">
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">Harnold Min</a></h4>
-                                        <p class="speaker-designation">Developer</p>
+                                        <h4 class="speaker-name"><a href="speaker-single.html">Ekrem Örünğ</a></h4>
+                                        <p class="speaker-designation">Lbank Turkey</p>
                                     </div>
                                 </div>
                                 <!-- Single Speakers End -->
@@ -490,7 +490,7 @@
                                         </div>
                                     </div>
                                     <div class="speaker-content">
-                                        <h4 class="speaker-name"><a href="speaker-single.html">Joakim Ken</a></h4>
+                                        <h4 class="speaker-name"><a href="speaker-single.html">Doruk Çakmak</a></h4>
                                         <p class="speaker-designation">Lead Speaker</p>
                                     </div>
                                 </div>
