about page updated

--- a/ABSummit/about.html
+++ b/ABSummit/about.html
@@ -324,15 +324,15 @@
                         <!-- Section Title Start -->
                         <div class="meeta-section-title-2 meeta-about-title">
                             <h4 class="sub-title">An event for</h4>
-                            <h2 class="main-title">Designers, Blockchain <br> developers & Design</h2>
+                            <h2 class="main-title">Companies, Blockchain <br> enthusiast & Students</h2>
                         </div>
                         <!-- Section Title End -->
 
                         <!-- About Content Start -->
                         <div class="meeta-about-content">
 
-                            <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their knees, try new things, to be vulnerable, and to have epic adventures</p>
-                            <p>We’re inviting the top creatives in the tech industry from all over the world to come learn, grow, scrape their knees, try new things, to be vulnerable, and to have epic adventures together, this time both in-person</p>
+                            <p>Your city will host an Anatolian Blockchain Meetup! On December 17, our second Anatolian Blockchain Meetup will be held in Eskişehir. It welcomes blockchain specialists, senior project managers, traders, students, business owners, and Web3 fans from all around the world to come together.</p>
+                         
 
                         </div>
                         <!-- About Content End -->
