--- a/ABSummit/login-register.html
+++ b/ABSummit/login-register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Meeta - Event & Conference HTML5 Template</title>
+    <title>Anatolian Blockchain Summit</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
